docs: /report 의 응답 형식 수정
