# src/docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  forms.ReportForm:
+  forms.ReportRequestForm:
     properties:
       deviceInfo:
         example: 00:11:22:33:FF:EE
@@ -10,6 +10,22 @@ definitions:
       longitude:
         example: 126.96631451849314
         type: number
+    type: object
+  forms.ReportResponse:
+    properties:
+      createdAt:
+        type: string
+      deviceInfo:
+        example: 00:11:22:33:FF:EE
+        type: string
+      latitude:
+        example: 37.5428147089301
+        type: number
+      longitude:
+        example: 126.96631451849314
+        type: number
+      updatedAt:
+        type: string
     type: object
   forms.UserRegistrationForm:
     properties:
@@ -30,19 +46,6 @@ definitions:
         example: "01043214321"
         type: string
     type: object
-  models.ReportDocument:
-    properties:
-      deviceInfo:
-        type: string
-      latitude:
-        type: number
-      longitude:
-        type: number
-      recordedAudioURL:
-        type: string
-      reporterID:
-        type: integer
-    type: object
 info:
   contact: {}
   title: ShoeGuard Main Backend API
@@ -59,14 +62,14 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/forms.ReportForm'
+          $ref: '#/definitions/forms.ReportRequestForm'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.ReportDocument'
+            $ref: '#/definitions/forms.ReportResponse'
       security:
       - BasicAuth: []
       summary: Report Request
